[gd_scene load_steps=14 format=2]

[ext_resource path="res://views/themes/dark.tres" type="Theme" id=1]
[ext_resource path="res://views/main/main_view.gd" type="Script" id=2]
[ext_resource path="res://views/main/menu_button.gd" type="Script" id=3]
[ext_resource path="res://views/main/tab_container.gd" type="Script" id=4]
[ext_resource path="res://views/main/template_dialog.gd" type="Script" id=5]
[ext_resource path="res://icons/icon_menu.svg" type="Texture" id=6]
[ext_resource path="res://views/main/confirm_exit_dialog.gd" type="Script" id=7]
[ext_resource path="res://views/themes/styles/icon_button_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://views/themes/styles/icon_button_hover.tres" type="StyleBox" id=9]
[ext_resource path="res://views/themes/styles/icon_button_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://views/auto_scale.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.627451 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.478431, 0.027451, 0.027451, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="MainView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 256 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_button = NodePath("VBoxContainer/TopBar/MenuButton")
tab_container = NodePath("VBoxContainer/TabContainer")
file_dialog = NodePath("FileDialog")
black_overlay = NodePath("BlackOverlay")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1360.0
margin_bottom = 764.0
custom_constants/separation = 0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1354.0
margin_bottom = 29.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopBar"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 2.0
margin_bottom = 29.0
custom_constants/separation = 2
script = ExtResource( 11 )
const_separation = true

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/TopBar"]
margin_left = 6.0
margin_right = 30.0
margin_bottom = 29.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 6 )
expand_icon = true
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Items are defined in the MainView script"
}

[node name="Tabs" type="Tabs" parent="VBoxContainer/TopBar"]
margin_left = 34.0
margin_right = 1354.0
margin_bottom = 29.0
size_flags_horizontal = 3
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1354.0
margin_bottom = 760.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = false
script = ExtResource( 4 )
tabs = NodePath("../TopBar/Tabs")
confirm_dialog = NodePath("../../ConfirmExitDialog")

[node name="BlackOverlay" type="Panel" parent="."]
visible = false
margin_left = 6.0
margin_top = 4.0
margin_right = 1360.0
margin_bottom = 764.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 383.0
margin_top = 124.0
margin_right = 983.0
margin_bottom = 644.0
rect_min_size = Vector2( 600, 520 )
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Create a new graph template"
resizable = true
dialog_hide_on_ok = true
access = 2
filters = PoolStringArray( "*.cgraph" )
current_dir = "/home/hungryproton/Work/Games/ConceptGraph"
current_path = "/home/hungryproton/Work/Games/ConceptGraph/"
script = ExtResource( 5 )

[node name="ConfirmExitDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 528.0
margin_top = 324.0
margin_right = 838.0
margin_bottom = 444.0
rect_min_size = Vector2( 310, 120 )
size_flags_horizontal = 4
size_flags_vertical = 4
window_title = "Please confirm ..."
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="ConfirmExitDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmExitDialog/MarginContainer"]
margin_top = 20.0
margin_right = 310.0
margin_bottom = 100.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmExitDialog/MarginContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 310.0
margin_bottom = 30.0
text = "Save changes before closing the template?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmExitDialog/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 310.0
margin_bottom = 77.0
custom_constants/separation = 10
alignment = 1

[node name="Cancel" type="Button" parent="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 105.0
margin_bottom = 27.0
focus_mode = 0
text = "Cancel"

[node name="VSeparator" type="VSeparator" parent="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 135.0
margin_bottom = 27.0
custom_constants/separation = 20

[node name="Discard" type="Button" parent="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 208.0
margin_bottom = 27.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
text = "Discard"

[node name="Save" type="Button" parent="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 261.0
margin_bottom = 27.0
focus_mode = 0
text = "Save"
[connection signal="about_to_show" from="FileDialog" to="." method="_on_popup_about_to_show"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_popup_hidden"]
[connection signal="about_to_show" from="ConfirmExitDialog" to="." method="_on_popup_about_to_show"]
[connection signal="popup_hide" from="ConfirmExitDialog" to="." method="_on_popup_hidden"]
[connection signal="pressed" from="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="VBoxContainer/TabContainer" method="close_confirm_dialog"]
[connection signal="pressed" from="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer/Discard" to="VBoxContainer/TabContainer" method="close_tab"]
[connection signal="pressed" from="ConfirmExitDialog/MarginContainer/VBoxContainer/HBoxContainer/Save" to="VBoxContainer/TabContainer" method="save_and_close"]
